# Brunot

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
brunot/: bru_parser.py  brunot_config.py  cli.py  http_client.py  model.py  settings.py  variable_file_loader.py
brunot/ui/: main_window.py  navigation.py  request_editor.py  response_viewer.py  variable_files_dialog.py
tests/: test_bru_parser.py  test_brunot_config.py  test_http_client.py  test_model.py  test_settings.py  test_variable_file_loader.py
