[build-system]
requires = ["setuptools==75.6.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brunot"
version = "0.1.0"
description = "A minimal, local-first, Git-native API client compatible with Bruno .bru collections."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Brunot Contributors" }
]
dependencies = [
  "httpx==0.28.1",
  "PySide6==6.11.0",
  "platformdirs==4.9.4",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
brunot = "brunot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brunot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

